--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-4523924440 \nSupport added for:\n\t* AR0 and HLB MOR devices\n\t* Update messages
+4523924440 Support added for AR0 and HLB MOR devices.
