--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-4808148524 1.2.6 adds support for EAT02.colo.3 and tunes LCLC sorting algorithm
+3694386588 1.2.7 tunes sorting algorithm to affect all leaves
