--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-3694386588 1.2.7 tunes sorting algorithm to affect all leaves
+3634600323 1.2.8 convert sorting algo from 2D (StartDevice, EndDevice) to 3D (StartSlot, StartDevice, EndDevice)
