--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-3634600323 1.2.8 convert sorting algo from 2D (StartDevice, EndDevice) to 3D (StartSlot, StartDevice, EndDevice)
+3634600323 1.2.8 converts the longstanding 2D sorting algo (StartDevice, EndDevice) to 3D (StartSlot, StartDevice, EndDevice)
