--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-3634600323 1.2.8 converts the longstanding 2D sorting algo (StartDevice, EndDevice) to 3D (StartSlot, StartDevice, EndDevice)
+8114862816 1.2.9 fixes 3D sort
